--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,55 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-node_modules
-client/build
+# Node modules
+node_modules/
+client/node_modules/
+
+# Build output
+build/
+client/build/
 build/*
 !build/index.html
-.env
 
-# testing
-coverage
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+*.tmp
 
-# production
-# build
-
-# misc
+# OS files
 .DS_Store
+Icon?
+
+# Environment variables
+.env
+.env.*
 env.local
 env.development.local
 env.test.local
 env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# VSCode settings
+.vscode/
+
+# Coverage
+coverage/
+client/coverage/
+
+# Misc
+*.swp
+*.swo
+
+# Ignore local database
+*.sqlite3
+
+# Ignore dist
+/dist/
+client/dist/
+
+# Security
+bin/*.key
+bin/*.pem
+bin/*.csr
+*.pem
+*.key
